# FastLAS

./: .gitignore  .gitmodules  README.md  _config.yml  caviar.md  fastloas.md  index.md  installation.md  policy_learning.md  sentence_chunking.md
.github/workflows/: cmake.yml
FastLAS1/data/CAVIAR/: background  enumerable.rb  run_learning.rb  task_list
FastLAS1/data/policy_learning/: full_cross_validation.rb  resource_cross_validation.rb
FastLAS1/data/sentence_chunking/: compute_matches.rb  run_learning.rb
FastLAS1/implementation/: Node.h  SM_Utils.h  main.cpp  parser.y  tokens.l
FastLAS1/implementation/nodes/: NAtom.cpp  NAtom.h  NBinOp.h  NComplexExpr.h  NConstraintHead.h  NRule.cpp  NRule.h  NRuleHead.h  NString.h
FastLAS1/implementation/stages/: Generalise.cpp
FastLAS2/data/agent/: test_set.las
FastLAS2/implementation/: CMakeLists.txt  CachedPossibility.h  Example.cpp  Example.h  LanguageBias.h  ModeDeclaration.cpp  ModeDeclaration.h  Node.h  RuleSchema.cpp  RuleSchema.h  Utils.cpp  Utils.h  main.cpp  parser.y  tokens.l
FastLAS2/implementation/meta_programs/: Abduce.h  Analyse.h  Optimise.h  OptimiseSym.h  SatSuff.h  Solve.h
FastLAS2/implementation/nodes/: BasicNode.h  NArithmeticExpr.h  NAtom.cpp  NAtom.h  NBinOp.h  NChoice.cpp  NChoice.h  NComplexExpr.cpp  NComplexExpr.h  NConstraintHead.h  NLiteral.h  NNafLiteral.h  NPredicate.cpp  NPredicate.h  NRule.cpp  NRule.h  NRuleHead.h  NString.h  NTerm.cpp  NTerm.h
FastLAS2/implementation/stages/: Abduce.cpp  Abduce.h  Generalise.cpp  Generalise.h  Optimise.cpp  Optimise.h  OptimiseSym.cpp  OptimiseSym.h  Printing.cpp  Printing.h  SatSuff.cpp  SatSuff.h  Solve.cpp  Solve.h
FastLAS2/testing/: aaai_2020_task.las  aaai_presentation_task_c1.las  aaai_presentation_task_c2.las  agent_abduction.las  arithmetic.las  arithmetic2.las  choice.las  choice_non_opl.las  choice_rule.las  negative_examples.las  non_opl.las  non_opl_unstratified.las  semi_decomposable_sf_c1.las  semi_decomposable_sf_c2.las  simple_agent.las  simple_inc_exc.las  sudoku.las  sudoku_simple.las  test_all.rb
FastLOAS/example_tasks/: wc.las
IncrementalLASExperiments/data/agent/: non_opl_agent_iteration0_extra_predicates0_window_1.las  non_opl_agent_iteration0_extra_predicates0_window_10.las  non_opl_agent_iteration0_extra_predicates0_window_2.las  (+397 more)
data/CAVIAR/: run_testing.rb
data/sentence_chunking/: print_results.rb
implementation/: .gitignore  CMakeLists.txt  Example.cpp  Example.h  LanguageBias.h  ModeDeclaration.cpp  ModeDeclaration.h  SM_Utils.cpp  main.cpp  tokens.l
implementation/example_tasks/: aaai_presentation_task.las  prediction_task.las  semi_decomposable_sf.las
implementation/nodes/: BasicNode.h  NArithmeticExpr.h  NAtom.h  NLiteral.h  NNafLiteral.h  NTerm.cpp  NTerm.h
implementation/stages/: Optimise.cpp  Printing.cpp  SatSuff.cpp  Solve.cpp
(+1871 files in other folders)
